<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="UsingOnClickInXml"
    tools:targetApi="lollipop"
    tools:context=".activities.MainActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/main_activity_edittext"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/shape_1"
        android:elevation="2dp"
        android:hint="@string/goole_url"
        android:inputType="textUri"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:layoutDirection="ltr"
        android:id="@+id/main_activity_spinner"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_2"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_edittext" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_3"
        android:gravity="center"
        android:onClick="shortLinks"
        android:text="@string/app_name"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/main_activity_spinner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/main_activity_spinner"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_spinner" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_3"
        android:gravity="center"
        android:onClick="showTab"
        android:text="@string/Hemayat"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/appCompatButton"
        app:layout_constraintStart_toStartOf="@+id/appCompatButton"
        app:layout_constraintTop_toBottomOf="@+id/appCompatButton" />

</androidx.constraintlayout.widget.ConstraintLayout>